@@ -78,6 +78,19 @@ MIGCOM = $(MIG) -n -cc cat - /dev/null
 CPP = @CPP@ -x c
 
 #
+# Other Tools' Configuration.
+#
+
+# Don't needlessly overwrite files that whose contents haven't changed.  This
+# helps for avoinding unneccessary recompilation cycles when keeping
+# cross-compilation toolchains up-to-date.  Thus, unconditionally use the
+# `install-sh' that is supplied by GNU Automake 1.10.1, as the GNU Coreutils
+# one doesn't provide this functionality yet (TODO: change that).  TODO:
+# `build-aux' is hardcoded.
+install_sh = $(SHELL) $(abs_srcdir)/build-aux/install-sh -C
+INSTALL = $(install_sh)
+
+#
 # The main kernel functionality.
 #
 
